Create YamlTreeUtils and modify items of ListObject to protected